white space fix

--- a/style.css
+++ b/style.css
@@ -82,8 +82,8 @@ html{
     background-color: #333;
     border: .3rem solid #fff;
     padding: .5rem 1rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    margin-top: 3rem;
+    margin-bottom: 1rem;
     text-transform: lowercase;
     letter-spacing: 0.3rem;
 }
@@ -92,7 +92,7 @@ html{
 /*Navbar*/
 .navbar{
     width: 100%; 
-    height: 4rem;
+    height: 5.5rem;
     background-color: #050505;
     box-shadow: 2rem .2rem .5rem #050505;
     padding-bottom: 1.3rem;
@@ -202,11 +202,11 @@ html{
 
 .services{
     width: 100%;
-    height: 25vh;
+    height: 20vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-bottom: -1rem;
+    margin-bottom: -6rem;
 }
 
 .service{
@@ -352,11 +352,13 @@ html{
     box-shadow: none;
     border-color: #fff;
     margin-bottom: 2.5rem;
+    margin-top: -8rem;
 }
 
 .contact-form{
     width: 50rem;
     flex-direction: column;
+    margin-bottom: -2rem;
 }
 
 .contact-form input,
